--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	        <p>I write great content. I design and code websites. I create beautiful and useful things for people.<br><em>Let’s work together.</em></p>
           <p>I'm still building my website, but in the meantime, if you'd like to get to know me better, check out these:</p>
 
-          <button>Visit My Linkedin</button>
+          <button><a href="http://www.linkedin.com/in/lburr">Visit My Linkedin</a></button>
           <button>See My Work</button>
           <button><a href="mailto:lburr322@gmail.com?Subject=Hello" target="_top">Email Me</a></button>
 	        
