--- a/index.html
+++ b/index.html
@@ -19,12 +19,14 @@
     <div class="row">
       <div class="large-12 columns">
 	        <h3>I am a storyteller, and the web is my pen and paper.</h3>
-	        <article><p>I write great content. I design and code websites. I create beautiful and useful things for people.<br><em>Let’s work together.</em></p>
+	        <article><p>My work experiences reflect a vast array of interests centering around social media, web design and development, fashion, and cultural institutions.<br><em>Let’s work together.</em></p>
           <p>I'm still building my website, but in the meantime, get to know me better here:</p></article>
 
+        <div class="links">
           <a href="http://www.linkedin.com/in/lburr"><button>Visit My Linkedin</button></a>
           <a href="http://cargocollective.com/lesleyburr"><button>See My Work</button></a>
           <a href="mailto:lburr322@gmail.com?Subject=Hello" target="_top"><button>Email Me</button></a>
+        </div>
 	        
 
 
