making sure up to date

--- a/projectpage.html
+++ b/projectpage.html
@@ -23,51 +23,65 @@
     <div class="row">
       <div class="large-12 columns">
 	        <h3>Think. Write. Design. Create.</h3>
-	        <article>
-            <p>My work experiences reflect a vast array of interests centering around social media, web design and development, fashion, and cultural institutions.<br><em>Let’s work together.</em></p>
-          </article>
+          
+          <div class="project--overview"><p>To determine which messaging would be most effective in driving traffic to the Chicago History Museum Halloween Ball website to purchase tickets to the event, we conducted a A/B Split Test. We took a sample of 20% of our intended mailing lists, and sent two versions of the e-mail, one version to each half of the sample. Both e-mails contained identical subject lines.</p></div>
 
-          <dl class="accordion" data-accordion>
-  <dd>
-    <a href="#panel1">Accordion 1</a>
-    <div id="panel1" class="content active">
-      <dl class="tabs" data-tab>
-        <dd class="active"><a href="#panel2-1">Tab 1</a></dd>
-        <dd><a href="#panel2-2">Tab 2</a></dd>
-        <dd><a href="#panel2-3">Tab 3</a></dd>
-        <dd><a href="#panel2-4">Tab 4</a></dd>
-      </dl>
-      <div class="tabs-content">
-        <div class="content active" id="panel2-1">
-          <p>First panel content goes here...</p>
-        </div>
-        <div class="content" id="panel2-2">
-          <p>Second panel content goes here...</p>
-        </div>
-        <div class="content" id="panel2-3">
-          <p>Third panel content goes here...</p>
-        </div>
-        <div class="content" id="panel2-4">
-          <p>Fourth panel content goes here...</p>
-        </div>
+          <dl class="tabs" data-tab>
+            <dd class="active"><a href="#panel2-1">Original Copy</a></dd>
+            <dd><a href="#panel2-2">Process</a></dd>
+            <dd><a href="#panel2-3">Version A</a></dd>
+            <dd><a href="#panel2-4">Version B</a></dd>
+            <dd><a href="#panel2-5">Hypothesis</a></dd>
+            <dd><a href="#panel2-6">Results</a></dd>
+          </dl>
+          <div class="tabs-content">
+            <div class="content active" id="panel2-1">
+              <p>Join us as Chicago’s top talent unites for Boo: A Halloween Ball, a night of terrifying tales, music, and craft cocktails!  Steppenwolf’s Jessica Thebus resurrects Chicago’s scariest stories in our exhibition Chicago: Crossroads of America, along with music by DJ NIX and devilishly good cocktails by Danny Shapiro of Scofflaw, Justin Cochren of Moet Hennessey, and Paul Bastien of Drumbar. Costumes are encouraged for this upscale, spooky affair. (This event is 21+; ticket price includes 2 beverages.) Hurry! Tickets are going fast!</p>
+            </div>
+            <div class="content" id="panel2-2">
+              <ol>
+                <li>Separate the copy for easier reading.</li>
+                <li>Create a short, straight-forward subject line that clearly states the purpose of the email and compels e-mail recipients to open the message.</li>
+                <li>Emphasize the name of the event and create a subheading that sums up what the event features.</li>
+                <li>Insert time and date of event, which is crucial information.</li>
+                <li>Include chance to win free airline tickets as an extra incentive to attend the event.</li>
+              </ol>
+            </div>
+            <div class="content" id="panel2-3">
+              <img src="img/emails/Email-Boo-Version-A.jpg">
+            </div>
+            <div class="content" id="panel2-4">
+              <img src="img/emails/Email-Boo-Version-B.jpg">
+            </div>
+            <div class="content" id="panel2-5">
+              <p>Version A will be more successful. It is concise, and offers up just enough details to give readers a sense of the event’s experience without resulting in fatigue. In Version B, the list of information might become overwhelming. The details about the experiences and the amenities provided at the event may have gotten lost in the long list of local celebrities’ names, whom some of our audience may not even be familiar with.</p>
+            </div>
+            <div class="content" id="panel2-6">
+              <p>Because both e-mails contained identical subject lines, their open rate was identical. But Version A has received almost twice as many click-throughs as Version B. Thus, we sent Version A to the remaining 80% of recipients.<p>
+
+              <p><strong>Version A</strong><br>
+              Sent: 3260<br>
+              Opened: 554 (based on 17% open rate)<br>
+              Clicked: 44/554 = .079</p>
+
+              <p><strong>Version B (incumbent)</strong><br>
+              Sent: 3235<br>
+              Opened: 550 (based on 17% open rate)<br>
+              Clicked: 32/550 = .058</p>
+
+              <p><strong>Remainder</strong><br>
+              Sent: 21183<br>
+              Opened: 3601 (based on 17% open rate)<br>
+              Clicked: 297/3601 = .082</p>
+
+              <p>Used .082 (Remainder click rate) to calculate the potential click rate for the total email, which would equal the total sends (27678) times the click through rate for your copy (.082) = 385 clicks VS. Their click rate (.058) times total sends (27678) = 272</p>
+
+              <p>The difference between your potential clicks (385) and theirs (272) is 113. 113/272 = 41.5%, assuming their copy is the incumbent in this test.</p>
+            </div> 
+          </div>
+
       </div>
     </div>
-  </dd>
-  <dd>
-    <a href="#panel2">Accordion 2</a>
-    <div id="panel2" class="content">
-      Panel 2. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-    </div>
-  </dd>
-  <dd>
-    <a href="#panel3">Accordion 3</a>
-    <div id="panel3" class="content">
-      Panel 3. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-    </div>
-  </dd>
-</dl>
-
-
 
 </main>
     <footer class="social">
